// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend Ingest Container when the ingestion state is analyzed renders correctly 1`] = `
<div>
  <div
    className="ingestion-output"
  >
    <header
      className="entity-header-primary"
    >
      <figure>
        <i
          className="manicon manicon-text-placeholder"
        />
      </figure>
      <div
        className="title"
      >
        <h1>
          some-file.epub
        </h1>
      </div>
    </header>
    <div
      className="properties"
    >
      <div
        className="item"
      >
        <p
          className="label"
        >
          Current state
        </p>
        <p
          className="value"
        >
          Analyzed
        </p>
      </div>
      <div
        className="item"
      >
        <p
          className="label"
        >
          Strategy
        </p>
        <p
          className="value"
        >
          None
        </p>
      </div>
      <div
        className="item"
      >
        <p
          className="label"
        >
          Text ID
        </p>
        <p
          className="value"
        >
          This ingestion will create a new text
        </p>
      </div>
    </div>
    <div
      className="log"
    >
      <p
        className="label"
      >
        Log
      </p>
      <div
        className="value"
      >
        Connecting to Manifold websocket...
      </div>
    </div>
    <div
      className="utility"
    >
      <button
        className="button-bare-primary loading"
        disabled={true}
        onClick={[Function]}
      >
        Restart Ingestion
        <i
          className="manicon manicon-x-bold"
        />
      </button>
    </div>
  </div>
  <div
    className="buttons-icon-horizontal"
    style={
      Object {
        "marginTop": 30,
      }
    }
  >
    <button
      className="button-icon-secondary dull"
      onClick={[Function]}
    >
      <i
        className="manicon manicon-x small"
      />
      Back
    </button>
  </div>
</div>
`;

exports[`Backend Ingest Container when the ingestion state is finished renders correctly 1`] = `
<div>
  <div
    className="ingestion-output"
  >
    <header
      className="entity-header-primary"
    >
      <figure>
        <i
          className="manicon manicon-text-placeholder"
        />
      </figure>
      <div
        className="title"
      >
        <h1>
          some-file.epub
        </h1>
      </div>
    </header>
    <div
      className="properties"
    >
      <div
        className="item"
      >
        <p
          className="label"
        >
          Current state
        </p>
        <p
          className="value"
        >
          Finish
        </p>
      </div>
      <div
        className="item"
      >
        <p
          className="label"
        >
          Strategy
        </p>
        <p
          className="value"
        >
          None
        </p>
      </div>
      <div
        className="item"
      >
        <p
          className="label"
        >
          Text ID
        </p>
        <p
          className="value"
        >
          This ingestion will create a new text
        </p>
      </div>
    </div>
    <div
      className="log"
    >
      <p
        className="label"
      >
        Log
      </p>
      <div
        className="value"
      >
        Connecting to Manifold websocket...
      </div>
    </div>
    <div
      className="utility"
    >
      <button
        className="button-bare-primary loading"
        disabled={true}
        onClick={[Function]}
      >
        Restart Ingestion
        <i
          className="manicon manicon-x-bold"
        />
      </button>
    </div>
  </div>
  <div
    className="buttons-icon-horizontal"
    style={
      Object {
        "marginTop": 30,
      }
    }
  >
    <button
      className="button-icon-secondary dull"
      onClick={[Function]}
    >
      <i
        className="manicon manicon-x small"
      />
      Back
    </button>
  </div>
</div>
`;

exports[`Backend Ingest Container when the ingestion state is sleeping renders correctly 1`] = `
<div>
  <div
    className="ingestion-output"
  >
    <header
      className="entity-header-primary"
    >
      <figure>
        <i
          className="manicon manicon-text-placeholder"
        />
      </figure>
      <div
        className="title"
      >
        <h1>
          some-file.epub
        </h1>
      </div>
    </header>
    <div
      className="properties"
    >
      <div
        className="item"
      >
        <p
          className="label"
        >
          Current state
        </p>
        <p
          className="value"
        >
          Sleeping
        </p>
      </div>
      <div
        className="item"
      >
        <p
          className="label"
        >
          Strategy
        </p>
        <p
          className="value"
        >
          None
        </p>
      </div>
      <div
        className="item"
      >
        <p
          className="label"
        >
          Text ID
        </p>
        <p
          className="value"
        >
          This ingestion will create a new text
        </p>
      </div>
    </div>
    <div
      className="log"
    >
      <p
        className="label"
      >
        Log
      </p>
      <div
        className="value"
      >
        Connecting to Manifold websocket...
      </div>
    </div>
    <div
      className="utility"
    >
      <button
        className="button-bare-primary loading"
        disabled={true}
        onClick={[Function]}
      >
        Restart Ingestion
        <i
          className="manicon manicon-x-bold"
        />
      </button>
    </div>
  </div>
  <div
    className="buttons-icon-horizontal"
    style={
      Object {
        "marginTop": 30,
      }
    }
  >
    <button
      className="button-icon-secondary dull"
      onClick={[Function]}
    >
      <i
        className="manicon manicon-x small"
      />
      Back
    </button>
  </div>
</div>
`;
